--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
   <header>
     <div class="wrap">
-      <h1>Guía Visual de Entrenamiento</h1>
+      <h1>Felipe</h1>
+      <h2>Guía Visual de Entrenamiento</h2>
       <div class="subtitle">
         Offline • guarda los progresos en este dispositivo • exporta/importa para sincronizar
       </div>
